WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25196
Missing include of V8DOMMap.h
https://bugs.webkit.org/show_bug.cgi?id=25196
Summary
Missing include of V8DOMMap.h
Eric Roman
Reported
2009-04-14 17:43:14 PDT
When compiling after this patch:
http://trac.webkit.org/changeset/42504
I get error that removeAllDOMObjectsInCurrentThread() is undefined. Seems it is not including the header which declares it (V8DOMMap.h). Patch coming.
Attachments
Add a missing include file
(1.60 KB, patch)
2009-04-14 17:44 PDT
,
Eric Roman
no flags
Details
Formatted Diff
Diff
Add a missing include file
(971 bytes, patch)
2009-04-14 17:45 PDT
,
Eric Roman
dglazkov
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Roman
Comment 1
2009-04-14 17:44:08 PDT
Created
attachment 29484
[details]
Add a missing include file
Eric Roman
Comment 2
2009-04-14 17:45:58 PDT
Created
attachment 29485
[details]
Add a missing include file (first version incorrectly had some other changes in it from another patch; fixed).
Dimitri Glazkov (Google)
Comment 3
2009-04-16 21:16:26 PDT
Comment on
attachment 29485
[details]
Add a missing include file Don't forget bug URL in ChangeLog.
Dimitri Glazkov (Google)
Comment 4
2009-04-16 21:23:27 PDT
Landed as
http://trac.webkit.org/changeset/42604
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug