2009-04-16  Eric Roman  <eroman@chromium.org>

Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=25196
        Add a missing V8DOMMap include.

        * bindings/v8/WorkerScriptController.cpp: Included V8DOMMap.h.

Canonical link: https://commits.webkit.org/34656@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42604 268f45cc-cd09-0410-ab3c-d52691b4dbfc