WebCore/bindings/v8/WorkerScriptController.cpp
@@ -39,6 +39,7 @@
 #include "ScriptSourceCode.h"
 #include "ScriptValue.h"
 #include "DOMTimer.h"
+#include "V8DOMMap.h"
 #include "WorkerContext.h"
 #include "WorkerContextExecutionProxy.h"
 #include "WorkerObjectProxy.h"
